--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -19,10 +19,8 @@
     <!-- Height of the status bar -->
     <dimen name="status_bar_height">81.0px</dimen>
 
-    <!-- Software rounded corner radius -->
-    <dimen name="rounded_corner_radius">92px</dimen>
-    <dimen name="rounded_corner_radius_top">92px</dimen>
-    <dimen name="rounded_corner_radius_bottom">92px</dimen>
+    <!-- Radius of the software rounded corners. -->
+    <dimen name="rounded_corner_radius">103px</dimen>
 	
     <!-- Misc -->
     <dimen name="config_dialogCornerRadius">10dip</dimen>
