--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -25,7 +25,12 @@
     <dimen name="rounded_corner_radius_bottom">90px</dimen>
 
     <!-- Height of the status bar -->
-    <dimen name="status_bar_height_portrait">81px</dimen>
-    <dimen name="status_bar_height_landscape">81px</dimen>
+    <dimen name="status_bar_height_default">35dp</dimen>
 
+    <!-- Height of the status bar in portrait. -->
+    <dimen name="status_bar_height_portrait">35dp</dimen>
+
+    <!-- Height of the status bar in landscape. -->
+    <dimen name="status_bar_height_landscape">28dp</dimen>
+    
 </resources>
