--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -233,4 +233,11 @@
          -->
     <string translatable="false" name="config_mainBuiltInDisplayCutout">M -196.94531 0 C -155.00077 0 -153.18198 81 -110 81 L 0 81 L 110 81 C 153.18198 81 155.00077 0 196.94531 0 L 0 0 L -196.94531 0 z</string>
 
+    <!-- The component name, flattened to a string, for the default autofill service
+         to  enabled for an user. This service must be trusted, as it can be activated
+         without explicit consent of the user. If no autofill service with the
+         specified name exists on the device, autofill will be disabled by default.
+    -->
+    <string name="config_defaultAutofillService" translatable="false">com.google.android.gms/.autofill.service.AutofillService</string>        
+
 </resources>
