--- a/overlay/packages/apps/Settings/res/values/matrixx_strings.xml
+++ b/overlay/packages/apps/Settings/res/values/matrixx_strings.xml
@@ -13,5 +13,5 @@
     limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="matrixx_maintainer">ManitnjG</string>
+    <string name="matrixx_maintainer">ManiGtnj</string>
 </resources>
